2004-02-16  Padraig O'Briain <padraig.obriain@sun.com>

	* file-types-properties.glade: Remove unnecessary setting of ATK 
	relations. The module gail will ensure that the labels are set
	correctly. Set mnemonic widget to be a GnomeFileEntry instead of 
	a GtkEntry in the combo box. Fixes bug #134131.

2004-02-13  Jody Goldberg <jody@gnome.org>

	* Release 2.5.3

2004-02-10  Jody Goldberg <jody@gnome.org>

	* mime-type-info.c : rework to match nautilus and use icon themes
	  somewhat.  There is some serious cruft left in here.

2004-02-04  Jody Goldberg <jody@gnome.org>

	* mime-edit-dialog.c (mime_edit_dialog_class_init) : do not call these
	  construct only properties so that the info can change later.

2004-02-12  Mark McLoughlin  <mark@skynet.ie>

	* file-types-capplet.c: (cb_file_type_dialog_response): Update help
	link to point to user-guide.xml

2004-02-10  Kjartan Maraas  <kmaraas@gnome.org>

	* mime-edit-dialog.c: (mime_edit_dialog_get_app), (validate_data):
	Fix some typos.

2004-02-08  Kjartan Maraas  <kmaraas@gnome.org>

	* mime-edit-dialog.c: (validate_data): Remove extra
	full stop. Closes bug #132563.

2004-02-08  Kjartan Maraas <kmaraas@gnome.org>

	* file-types-icon-entry.c: Replace deprecated calls
	to g_dirname and g_basename.
	(#133174, Kjartan Maraas)

2004-01-20 Sivaiah Nallagatla <snallagatla@novell.com>

	* mime-edit-dialog.c (mime_add_dialog_new ) : do not try to set
	construct only property after object is constructed. Fixes #128374
	
2004-01-14  Jody Goldberg <jody@gnome.org>

	* Release 2.5.2

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1.1

2003-12-30  Jody Goldberg <jody@gnome.org>

	* Release 2.5.1

2003-12-03  Muktha  <muktha.narayan@wipro.com>

	* file-types-properties.glade: Added the label-for/by relation.
	Fixes #127304.

2003-12-01  Sivaiah Nallagatla  <snallagatla@novell.com>
	
	* service-info.c (service_info_save): Patch to remeber 
	custome program configured for Internet Services. #123976 in b.g.o
