@@ -1,3 +1,10 @@
+2004-02-19  Kaushal Kumar  <kaushal.kumar@wipro.com>
+
+	* file-types-capplet.c (remove_cb): Added warning dialog to prompt
+	the user before an entry is deleted permanently. (Release team's 
+	approval taken regarding the string addition).
+	Fix bug #109091.
+
 2004-02-16  Padraig O'Briain <padraig.obriain@sun.com>
 
 	* file-types-properties.glade: Remove unnecessary setting of ATK 
